fix max height of dialog on small screens

--- a/mobile/src/components/common/dialog/Dialog.scss
+++ b/mobile/src/components/common/dialog/Dialog.scss
@@ -8,7 +8,7 @@ $name: 'Dialog';
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  max-height: 100vh;
+  max-height: calc(100vh - var(--app-vertical-margins));
   border-radius: 0.25rem;
   background-color: $dark_gray;
   overflow: hidden;
